refactor(dto): relocate system DTOs and fix ObjectMapper bean